[package]
name = "blok"
version = "0.1.0"
edition = "2024"
description = "Falling block action puzzle game"
repository = "https://github.com/krobbi/blok"
license-file = "LICENSE.txt"
categories = ["games"]
publish = false

[dependencies]
winit = "0.30.13"

[lints.rust]
ambiguous_negative_literals = "warn"
elided_lifetimes_in_paths = "warn"
explicit_outlives_requirements = "warn"
ffi_unwind_calls = "forbid"
meta_variable_misuse = "warn"
non_ascii_idents = "forbid"
redundant_imports = "warn"
redundant_lifetimes = "warn"
single_use_lifetimes = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unit_bindings = "warn"
unnameable_types = "warn"
# unqualified_local_imports = "warn" # https://github.com/rust-lang/rust/issues/138299
unsafe_attr_outside_unsafe = "forbid"
unsafe_code = "forbid"
unsafe_op_in_unsafe_fn = "forbid"
unstable_features = "forbid"
unused_crate_dependencies = "warn"
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"
unused_macro_rules = "warn"
unused_qualifications = "warn"
unknown_lints = "forbid"

[lints.clippy]
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
absolute_paths = "warn"
allow_attributes_without_reason = "warn"
assertions_on_result_states = "warn"
decimal_literal_representation = "warn"
default_numeric_fallback = "warn"
doc_paragraphs_missing_punctuation = "warn"
impl_trait_in_params = "warn"
missing_assert_message = "warn"
precedence_bits = "warn"
redundant_type_annotations = "warn"
renamed_function_params = "warn"
same_name_method = "warn"
semicolon_inside_block = "warn"
unneeded_field_pattern = "warn"
unseparated_literal_suffix = "warn"
string_slice = "warn"
unused_trait_names = "warn"

[profile.release]
strip = true
lto = true
panic = "abort"
codegen-units = 1
